[gd_scene load_steps=2 format=3 uid="uid://kbhjd5hlpq7a"]

[ext_resource type="Script" path="res://Scripts/BuildingBase.gd" id="1_coe8f"]

[node name="BuildingBase" type="Node2D"]
script = ExtResource("1_coe8f")

[node name="BuildTimer" type="Timer" parent="."]

[node name="DebugCompletion" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.407843, 0.403922, 0, 1)
text = "DbgComplete"

[connection signal="timeout" from="BuildTimer" to="." method="_on_build_timer_timeout"]
